<resources>
    <string name="app_name">FireBaseProjectMarksHandler</string>
    <string name="next">next</string>
    <string name="student">Student</string>
    <string name="doctor">Doctor</string>
    <string name="you_have_to_check_one">You have to check  one</string>
    <string name="just_one">Just One !!!</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="marks_handler">Marks Handler</string>
    <string name="login">Login</string>
    <string name="register">register</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="let_us_know_about_yourself">Let us Know about yourself</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="reqiured">Required</string>
    <string name="should_be_six_least">\"should be 6 at least \"</string>
    <string name="cancelled">Cancelled</string>
    <string name="success">SUCCESS</string>
    <string name="enter_course_name">Enter Course Name</string>
    <string name="add">add</string>
    <string name="create_new_course">Create New Course</string>
    <string name="course_name">Course Name</string>
    <string name="quiz_grade">Quiz Grade</string>
    <string name="project_grade">Project Grade</string>
    <string name="attendance_grade">Attendance Grade</string>
    <string name="confirm">Confirm</string>
    <string name="nocoursesfound">no courses found</string>
    <string name="doctor_control_page">Doctor Control Page</string>
    <string name="open">OPEN</string>
    <string name="attendance">Attendance</string>
    <string name="quiz">Quiz</string>
    <string name="upload_materials">upload\nMaterials</string>
    <string name="generate">GENERATE</string>
    <string name="generated_code">Generated Code</string>
    <string name="copied">Copied.</string>
    <string name="create_mcq_assignment">Create mcq Assignment</string>
    <string name="create_the_question">Create the Question</string>
    <string name="next_question">Next Question</string>
    <string name="upload_the_assignment">upload the assignment</string>
    <string name="added">Added</string>
    <string name="selectRightAnswer">please select Right Answer</string>
    <string name="youadd">You have to add at least 2 Question</string>
    <string name="uploaded">Uploaded</string>
    <string name="enter_course_id">Enter Course Id</string>
</resources>