<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <TextView
        android:id="@+id/MarksHandler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold"
        android:text="@string/marks_handler"
        android:background="@color/navy2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingVertical="@dimen/_10sdp"
        />
    <ImageView
        android:id="@+id/person"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_180sdp"
        app:layout_constraintTop_toBottomOf="@id/MarksHandler"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/personimg"
         />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:paddingStart="@dimen/_10sdp"
        android:background="@drawable/edit_text_login_background"
        android:textColor="@color/white2"
        android:textColorHint="@color/white2"
        android:hint="@string/enter_your_email"
        app:layout_constraintTop_toBottomOf="@id/person"
        android:paddingVertical="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_10sdp"
        android:paddingVertical="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/edit_text_login_background"
        android:textColor="@color/white2"
        android:textColorHint="@color/white2"
        android:hint="@string/enter_your_password"
        app:layout_constraintTop_toBottomOf="@id/editText_email"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:maxLines="1"
        android:inputType="textVisiblePassword"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editText_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/hint_grey"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_margin="@dimen/_25sdp"
        app:cornerRadius="20sp"
        android:text="@string/login"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/navy"
        android:textStyle="bold"
        android:paddingVertical="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_30sdp"
        app:strokeColor="@color/whiteBodyColor"
        app:strokeWidth="@dimen/_2sdp"
        />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="@id/editText_password"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:text="@string/don_t_have_an_account"
        android:paddingVertical="@dimen/_10sdp"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/navy2"
        />

    <TextView
        android:id="@+id/textview_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/navy2"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/text_view"
        app:layout_constraintStart_toEndOf="@id/text_view"
        app:layout_constraintTop_toTopOf="@id/text_view"
        android:layout_marginStart="@dimen/_5sdp"
         />


</androidx.constraintlayout.widget.ConstraintLayout>