<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">

<TextView
    android:id="@+id/sign_up"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:text="@string/sign_up"
    android:textAllCaps="true"
    android:textSize="@dimen/_30sdp"
    android:textStyle="bold"
    android:textColor="@color/navy"
    android:layout_marginStart="@dimen/_25sdp"
    android:layout_marginTop="@dimen/_35sdp"
    />
    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sign_up"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/let_us_know_about_yourself"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_5sdp"
        />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/edit_text_register_background"
        app:layout_constraintTop_toBottomOf="@id/text_view"
        android:layout_marginTop="@dimen/_60sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:hint="@string/enter_your_name"
        android:textColorHint="@color/grey"
        android:textColor="@color/navy"
        android:paddingStart="@dimen/_10sdp"
        android:maxLines="1"
        android:inputType="textPersonName"
        />
    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/edit_text_register_background"
        app:layout_constraintTop_toBottomOf="@id/editText_name"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:hint="@string/enter_your_email"
        android:textColorHint="@color/grey"
        android:textColor="@color/navy"
        android:paddingStart="@dimen/_10sdp"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/edit_text_register_background"
        app:layout_constraintTop_toBottomOf="@id/editText_email"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:hint="@string/enter_your_password"
        android:textColorHint="@color/grey"
        android:textColor="@color/navy"
        android:paddingStart="@dimen/_10sdp"
        android:maxLines="1"
        android:inputType="textVisiblePassword"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editText_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/navy"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_margin="@dimen/_25sdp"
        app:cornerRadius="20sp"
        android:text="@string/register"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:paddingVertical="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_30sdp"
        app:strokeColor="@color/grey"
        app:strokeWidth="@dimen/_2sdp"
        />
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>