<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddCourseActivity">


    <TextView
        android:id="@+id/create_course"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.50"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/create_new_course"
        android:textStyle="italic"
        android:textSize="@dimen/_25sdp"
        android:paddingStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:paddingVertical="@dimen/_40sdp"
        android:textColor="@color/navy2"
        />

    <ImageView
        android:id="@+id/img_hero"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_130sdp"
        app:layout_constraintStart_toEndOf="@id/create_course"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/create_course"
        app:layout_constraintTop_toTopOf="@id/create_course"
        android:src="@drawable/hero"
        />
    <EditText
        android:id="@+id/edit_course_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/edit_text_register_background"
        android:paddingVertical="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/create_course"
        android:hint="@string/course_name"
        android:textColorHint="@color/grey"
        android:paddingStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/edit_quiz_grade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.43"
        android:layout_marginStart="@dimen/_20sdp"
        android:background="@drawable/edit_text_register_background"
        android:paddingVertical="@dimen/_15sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:gravity="center"
        android:hint="@string/quiz_grade"
        android:textColorHint="@color/grey"
        android:paddingStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/edit_course_name"
        app:layout_constraintStart_toStartOf="parent"
        android:maxLines="1"
        android:maxLength="2"
        android:inputType="number"
        />
    <EditText
        android:id="@+id/edit_project_grade"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.42"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/edit_text_register_background"
        android:paddingVertical="@dimen/_15sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:hint="@string/project_grade"
        android:textColorHint="@color/grey"
        android:paddingStart="@dimen/_5sdp"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/edit_course_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:maxLines="1"
        android:maxLength="2"
        android:inputType="number"
        />
    <EditText
        android:id="@+id/edit_attendance_grade"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.50"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/edit_text_register_background"
        android:paddingVertical="@dimen/_15sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:hint="@string/attendance_grade"
        android:textColorHint="@color/grey"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_quiz_grade"
        android:maxLines="1"
        android:maxLength="2"
        android:inputType="number"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_60sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:cornerRadius="@dimen/_25sdp"
        android:text="@string/confirm"
        android:textSize="@dimen/_15sdp"
        android:backgroundTint="@color/navy2"
        app:strokeWidth="@dimen/_2sdp"
        app:strokeColor="@color/miniDescription"
        android:paddingVertical="@dimen/_10sdp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>