<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/_10sdp"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/image_background"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_50sdp"
        android:src="@drawable/attend"
        app:tint="@color/lighterBlue"
        />
    <TextView
        android:id="@+id/doctor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.80"
        android:text="@string/doctor"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_background"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:paddingStart="@dimen/_10sdp"
        android:background="@drawable/edit_text_cb_background"
        />
    <TextView
        android:id="@+id/student"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.80"
        android:text="@string/student"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/doctor"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:paddingStart="@dimen/_10sdp"
        android:background="@drawable/edit_text_cb_background"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/student"
        android:text="@string/next"
        android:textSize="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:backgroundTint="@color/lighterBlue"
        app:cornerRadius="@dimen/_25sdp"
        />
    <CheckBox
        android:id="@+id/cb_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/doctor"
        app:layout_constraintTop_toTopOf="@id/doctor"
        app:layout_constraintBottom_toBottomOf="@id/doctor"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_5sdp"
        />
    <CheckBox
        android:id="@+id/cb_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/student"
        app:layout_constraintTop_toTopOf="@id/student"
        app:layout_constraintBottom_toBottomOf="@id/student"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_5sdp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>