<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteBodyColor"
    android:paddingHorizontal="@dimen/_8sdp"
    android:paddingTop="@dimen/_10sdp"
    tools:context=".ui.AttendanceActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="@dimen/_5sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:background="@drawable/text_confirm_background"
                android:gravity="center"
                android:hint="@string/generated_code"
                android:paddingVertical="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/browser_actions_bg_grey"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.60" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_generate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_2sdp"
                android:backgroundTint="@color/blue_darker"
                android:paddingVertical="@dimen/_25sdp"
                android:text="@string/generate"
                app:cornerRadius="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="@id/text_code"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_code"
                app:layout_constraintTop_toTopOf="@id/text_code"
                app:layout_constraintWidth_percent="0.35"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:backgroundTint="@color/blue_darker"
        android:textColor="@color/browser_actions_bg_grey"
        android:enabled="false"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/confirm"
        app:cornerRadius="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:strokeColor="@color/grey"
        app:strokeWidth="@dimen/_1sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>